@@ -1,3 +1,9 @@
+2007-01-03  Marc-Andre Lureau  <marcandre.lureau@gmail.com>
+
+	Fixes #392276
+
+	* sound-properties-capplet.c (setup_dialog): #ifdef esd-related code.
+	
 2007-01-06  Lucas Rocha <lucasr.at.mundo@gmail.com>
 
 	Fixes #336286
